# JARVIS

./: README.md  WebSocketServer.py  calculateBatteryPercentage.py  install.sh  main.py  motor_control.py  requirements.txt  serial_testing.py  start_cam.sh  stop_cam.sh  updatedBatteryReader.py  zoomTest.py
Arduino/: Camera_Servo_Control_ROBB.ino
GUI_APP/: Lidar  ZoomUI.py  camera_control.py  gui.py  main.py  motor_commands.py
Main_App/GUI_UI_Thread/: CameraControls.py  WebSocketServer.py  battery_reader.py  camera_control.py  gui_wrapper.py  lidar_control.py  main_gui.py  motor_control.py  rover_lidar.py  websocket_test.py
Main_App/Lidar_Thread/: lidar_servo_slam.py  motor_control.py  opengl_viewer.py  rover_lidar.py
Microcontroller_Stuff/: Camera Mount.stl
NUC/Web Server/: README.md  (+3 more)
ROS/: motor_control.py
ROS/ros2_ws/src/server_to_motors/: package.xml  setup.cfg  setup.py
ROS/ros2_ws/src/server_to_motors/server_to_motors/: camera_control_subscriber.py  local_server_publisher.py  motor_control_subscriber.py  object_detection_publisher.py  subscriber_member_function.py
RPi/: socket_server.py
RaspberryPI/: install.sh  start_cam.sh
SLAM_Visualization/: note-cam-lidar-math.txt  python-code-path  ylidar.dxf  ylidar.dxf~
Web Server/: pi-redirect.html
Web_Server/: CHANGELOG.md  README.md  WebSocketServer.py  cdn.css  cdn.html  pi-redirect.html
servo-lidar/: cam-view.py  lidar1.3.py  microservolidar.py  open3dviewer.py  serialcom.py  servolidar.py  servolidar3dview.py
youtube-ylidarx4/: python-code-path  sement-intercept.scad  ylidar.scad
(+67 files in other folders)
